verifikator-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verifikator-deployment
  labels:
    app: verifikator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verifikator
  template:
    metadata:
      labels:
        app: verifikator
    spec:
      containers:
        - name: verifikator
          image: bostang/secure-onboarding-system-verifikator:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health # Sesuaikan dengan endpoint health check Spring Boot Anda
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health # Sesuaikan dengan endpoint health check Spring Boot Anda
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
---
