backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080 # Port yang akan diakses dari luar cluster/frontend
      targetPort: 8080 # Port internal container
  type: NodePort # Atau LoadBalancer jika di cloud
---
