db_backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-backend-service
spec:
  selector:
    app: db-backend
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
