db_verifikator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-verifikator-service
spec:
  selector:
    app: db-verifikator
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
