frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000 # Port yang akan diakses dari luar cluster
      targetPort: 80 # Port internal container
  type: NodePort # Penting agar bisa diakses dari browser Minikube
---
