verifikator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: verifikator-service
spec:
  selector:
    app: verifikator
  ports:
    - protocol: TCP
      port: 8081 # Port yang akan diakses dari luar cluster/frontend
      targetPort: 8081 # Port internal container
  type: NodePort # Atau LoadBalancer jika di cloud
---
